--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,4 +39,4 @@ jobs:
       run: |
         pytest
     - name: Print DEV secret
-      run: echo "The secret is ${{ secrets.MY_SECRET }}"
+      run: echo "The secret is ${{ secrets.DEV_USER }}"
